tests/ui/traits/const-traits/partial/no-const-callers.stderr
error[E0015]: cannot call non-const associated function `<T as A>::b` in constant functions
  --> $DIR/no-const-callers.rs:15:5
   |
LL |     T::b();
   |     ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const associated function `<() as A>::b` in constant functions
  --> $DIR/no-const-callers.rs:18:5
   |
LL |     <()>::b();
   |     ^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
